--- a/src/app/components/navbar/navbar.component.html
+++ b/src/app/components/navbar/navbar.component.html
@@ -12,11 +12,11 @@
         </li> -->
 
         <li class="nav-item">
-          <a class="nav-link" href="#">Compra</a>
+          <a class="nav-link" href="#" [routerLink]="['/compra']">Compra</a>
         </li>
 
         <li class="nav-item">
-          <a class="nav-link" href="#">Venta</a>
+          <a class="nav-link" href="#" [routerLink]="['/venta']">Venta</a>
         </li>
 
         <li class="nav-item dropdown">
@@ -34,6 +34,10 @@
             <li><a class="dropdown-item" href="#">LOG</a></li>
 
           </ul>
+        </li>
+
+        <li class="nav-item">
+          <a class="nav-link" href="#">Cerrar Sesion <i class="fa fa-sign-out"></i></a>
         </li>
 
 
