--- a/src/app/components/create-categoria/create-categoria.component.html
+++ b/src/app/components/create-categoria/create-categoria.component.html
@@ -1,1 +1,28 @@
-<p>create-categoria works!</p>
+<div class="container mt-5">
+  <div class="row">
+    <div class="card">
+      <div class="card-body">
+        <form action="" class="row">
+
+          <h3>Nuevo Producto</h3>
+          <div><hr></div>
+
+          <div class="col-md-6">
+              <label for="validationDefault01" class="form-label">Categoria</label>
+              <input type="text" class="form-control" required>
+          </div>
+
+          <div class="col-md-6">
+            <label for="" class="form-label">Imagen</label>
+            <input type="file" class="form-control">
+          </div>
+
+          <div class="text-center mt-3">
+            <button type="button" class="btn btn-success">Guardar <i class="fa fa-save"></i></button>
+          </div>
+
+        </form>
+      </div>
+    </div>
+  </div>
+</div>
