--- a/src/app/components/producto/producto.component.html
+++ b/src/app/components/producto/producto.component.html
@@ -3,7 +3,7 @@
     <div class="card">
       <div class="card-header">
         <h3 class="card-title text-center">Productos</h3>
-        <button class="btn btn-primary" type="button">Nuevo <i class="fa fa-plus"></i></button>
+        <button class="btn btn-primary" type="button" [routerLink]="['/createProducto']">Nuevo <i class="fa fa-plus"></i></button>
       </div>
       <div class="card-body">
 
